--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,9 +2,9 @@
   "promptDelete": false,
   "alwaysUpdateLinks": true,
   "pdfExportSettings": {
-    "pageSize": "Letter",
+    "pageSize": "A4",
     "landscape": false,
-    "margin": "0",
-    "downscalePercent": 100
+    "margin": "2",
+    "downscalePercent": 66
   }
 }
